New feature: TRD duplicates can now be classified into rTRD and dTRD

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,33 +23,41 @@ knitr::opts_chunk$set(
 coverage](https://codecov.io/gh/almeidasilvaf/doubletrouble/branch/devel/graph/badge.svg)](https://codecov.io/gh/almeidasilvaf/doubletrouble?branch=devel)
 <!-- badges: end -->
 
-The major goal of `doubletrouble` is to identify duplicated genes from
+The major goal of __doubletrouble__ is to identify duplicated genes from
 whole-genome protein sequences and classify them based on their modes
-of duplication. The simplest classification scheme has two duplication modes: 
+of duplication. Duplicates can be classified using four different 
+classification schemes, which increase the complexity and level of details
+in a stepwise manner. The classification schemes and the duplication modes
+they can classify are:
 
-1. Whole-genome duplication (WGD);
-2. Small-scale duplication (SSD)
 
-For a more detailed view of the duplication modes, users can also choose to
-split SSD into subcategories, so the available duplication modes will be:
+| Scheme   | Duplication modes           |
+|:---------|:----------------------------|
+| binary   | SD, SSD                     |
+| standard | SD, TD, PD, DD              |
+| extended | SD, TD, PD, TRD, DD         |
+| full     | SD, TD, PD, rTRD, dTRD, DD  |
 
-1. Whole-genome duplication (WGD);
-2. Tandem duplication (TD);
-3. Proximal duplication (PD);
-4. Transposed duplication (TRD);
-5. Dispersed duplication (DD).
+*Legend:* **SD**, segmental duplication. **SSD**, small-scale duplication.
+**TD**, tandem duplication. **PD**, proximal duplication. 
+**TRD**, transposon-derived duplication. 
+**rTRD**, retrotransposon-derived duplication.
+**dTRD**, DNA transposon-derived duplication. **DD**, dispersed duplication.
+
 
 Besides classifying gene pairs, users can also classify genes, so that
-each gene is assigned a unique mode of duplication.
+each gene is assigned to a unique mode of duplication.
 
-Users can also calculate substitution rates per substitution site (i.e., Ka
-and Ks) from duplicate pairs, find peaks in Ks distributions with Gaussian
-Mixture Models (GMMs), and classify gene pairs into age groups based on Ks
-peaks.
+Users can also calculate substitution rates per substitution site (i.e., 
+$K_a$, $K_s$ and their ratios $\frac{K_a}{K_s}$) from duplicate pairs, 
+find peaks in Ks distributions with Gaussian Mixture Models (GMMs), 
+and classify gene pairs into age groups based on Ks peaks.
 
 ## Installation instructions
 
-Get the latest stable `R` release from [CRAN](http://cran.r-project.org/). Then install `doubletrouble` from [Bioconductor](http://bioconductor.org/) using the following code:
+Get the latest stable `R` release from [CRAN](http://cran.r-project.org/). 
+Then install __doubletrouble__ from [Bioconductor](http://bioconductor.org/) 
+using the following code:
 
 ```{r 'install', eval = FALSE}
 if (!requireNamespace("BiocManager", quietly = TRUE)) {
@@ -74,11 +82,13 @@ run this yourself to check for any updates on how to cite __doubletrouble__.
 print(citation('doubletrouble'), bibtex = TRUE)
 ```
 
-Please note that the `doubletrouble` was only made possible thanks to many other R and bioinformatics software authors, which are cited either in the vignettes and/or the paper(s) describing this package.
+Please note that the __doubletrouble__ was only made possible thanks to many other R and bioinformatics software authors, which are cited either in the vignettes and/or the paper(s) describing this package.
 
 ## Code of Conduct
 
-Please note that the `doubletrouble` project is released with a [Contributor Code of Conduct](http://bioconductor.org/about/code-of-conduct/). By contributing to this project, you agree to abide by its terms.
+Please note that the __doubletrouble__ project is released with 
+a [Contributor Code of Conduct](http://bioconductor.org/about/code-of-conduct/). 
+By contributing to this project, you agree to abide by its terms.
 
 ## Development tools
 
